added some user login feature tests

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,11 +1,9 @@
-<ul class="albums">
-  <li ng-repeat="movie in movies" class="album" ng-style="{ background : movie.colors.background }">
-    <div class="container">
-      <img ng-src="{{ movie.cover }}" class="cover" />
-      <div class="infos">
-        <h1 class="name" ng-style="{ color : movie.colors.content[ 0 ] }"> {{ movie.title }}</h1>
-      </div>
-    </div>
-  </li>
-</ul>
 
+<% if current_user %>
+  <h1> "Hello #{current_user.name}"</h1>
+<% else %>
+  <%= simple_form_for @user, new_session_path do |f| %>
+    <%= f.input :email, id: "email" %>
+    <%= f.input :password, id: "password" %>
+    <%= f.button :submit %>
+<% end %>
