--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,15 @@
 <% if current_user %>
   <h1><%= current_user.first_name %></h1>
 <% else %>
-  <h1> "Please sign in" <%= session.inspect %></h1>
+  <%= form_tag("/sessions", method: "post") do %>
+    <%= label_tag(:email, "Email:") %>
+    <%= text_field_tag(:email) %>
+    <%= label_tag(:password, "Password:") %>
+    <%= text_field_tag(:password) %>
+    <%= submit_tag("Sign In") %>
+  <% end %>
 <% end %>
+
+
+
 
