added a test for adding a movie

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
 
-<%= image_tag @movie_poster.poster_image(:medium) %>
+<%= image_tag @movie.poster_image(:medium) %>
 
-<h1><%= @movie_poster.title %></h1>
+<h1><%= @movie.title %></h1>
