--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,7 +5,7 @@
     <%= label_tag(:email, "Email:") %>
     <%= text_field_tag(:email) %>
     <%= label_tag(:password, "Password:") %>
-    <%= text_field_tag(:password) %>
+    <%= password_field_tag(:password) %>
     <%= submit_tag("Sign In") %>
   <% end %>
 <% end %>
