--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= stylesheet_link_tag :application, media: "all" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app="app" ng-controller="main">
   <%= render "flashes" -%>
   <%= yield %>
   <%= render "javascript" %>
