--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for(@movie, url: movies_path) do |f| %>
   <%= f.text_field :title, :id => "title", placeholder: "Title" %> 
+  <%= f.text_field :cast, :id => "Cast", placeholder: "ex. Tom Cruise, Nicole Kidman, Ed Harris" %> 
   <%= f.text_field :director, :id => "director", placeholder: "Director" %> 
   <%= f.label :poster_image, "Attach an Image" %>
   <%= f.text_field :release_date, :id => "Release date", placeholder: "When was this film released?" %>
