adding tests for adding film stills

--- a/app/views/pages/user_dashboard.html.erb
+++ b/app/views/pages/user_dashboard.html.erb
@@ -1,2 +1,3 @@
 <h1> "Welcome to your dashboard <%= current_user.last_name %>" </h1>
 <%= link_to "Add a Movie", new_movie_path %>
+<%= link_to "Add a Still", new_still_path %>
