adding a way to have film be served up by arrays of four

--- a/app/views/stills/new.html.erb
+++ b/app/views/stills/new.html.erb
@@ -1,4 +1,7 @@
-<%= simple_form_for(@still, url: stills_path) do |f| %>
-  <%= f.label :image, "Attach an Image" %>
-  <%= f.file_field :image, id: "Film Still" %>
-<% end %>
+<%# <%= simple_form_for(@still, url: stills_path) do |f| %>
+<%#   <%= f.label :image, "Attach an Image" %>
+<%#   <% @films.each do |film| %>
+<%#     <%= f.input :films, :collection => [film] %>
+<%#   <% end %>
+<%#   <%= f.file_field :image, id: "Film Still" %>
+<%# <% end %>
